.backup_gl_to_gov_20260209_214318/.backup_gl_to_gov_20260209_214301/archives/old-outputs/workspace-output-1769587372-2519.txt
  File "elasticsearch-search-system/workspace/projects/search-system/src/search/autocomplete.py", line 1
    /**
    ^
SyntaxError: invalid syntax
  File "elasticsearch-search-system/workspace/projects/search-system/src/search/full_text_search.py", line 1
    /**
    ^
SyntaxError: invalid syntax
  File "elasticsearch-search-system/workspace/projects/search-system/src/search/__init__.py", line 1
    /**
    ^
SyntaxError: invalid syntax
  File "elasticsearch-search-system/workspace/projects/search-system/src/search/faceted_search.py", line 1
    /**
    ^
SyntaxError: invalid syntax
  File "elasticsearch-search-system/workspace/projects/search-system/src/elasticsearch/__init__.py", line 1
    /**
    ^
SyntaxError: invalid syntax
  File "elasticsearch-search-system/workspace/projects/search-system/src/elasticsearch/client.py", line 1
    /**
    ^
SyntaxError: invalid syntax
  File "elasticsearch-search-system/workspace/projects/search-system/src/indexing/index_optimizer.py", line 1
    /**
    ^
SyntaxError: invalid syntax
  File "elasticsearch-search-system/workspace/projects/search-system/src/indexing/incremental_updater.py", line 1
    /**
